<resources>
    <string name="app_name">QuizDroid (Basics)</string>
    <string name="topic">Topic</string>
    <string name="_3_questions">3 Questions</string>
    <string name="begin">Begin</string>
    <string name="description">Description</string>
    <string name="question">Question</string>
    <string name="topics">Topic</string>
    <string name="total_questions_3">3 Questions\n</string>
    <string name="btnBegin">Begin</string>
    <string name="descrip">Description</string>
    <string name="hello">Hello</string>
    <string name="next">Next</string>
    <string name="question_str">question_string\n</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="quizdroid">QuizDroid</string>
    <string name="preferences">Preferences</string>
</resources>