<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-29dp">

        <TextView
            android:id="@+id/topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/topics"
            android:textSize="28dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topic"
            android:layout_marginTop="149dp"
            android:text="@string/btnBegin" />

        <TextView
            android:id="@+id/description"
            android:layout_width="380dp"
            android:layout_height="99dp"
            android:layout_below="@+id/topic"
            android:layout_marginTop="37dp"
            android:text="@string/descrip"
            android:textSize="20dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>